// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> with error and label should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 1px solid #dddddd;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
}

.c1 {
  font-size: 1rem;
  line-height: 2rem;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor={undefined}
  >
    Label 1
  </label>
  <select
    className="c2"
    id={undefined}
  >
    <option>
      Option 1
    </option>
  </select>
</div>
`;

exports[`<Select /> without error and label should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 1px solid #dddddd;
  box-sizing: border-box;
  font-size: 1rem;
  height: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
}

<div
  className="c0"
>
  <select
    className="c1"
    id={undefined}
  >
    <option>
      Option 1
    </option>
  </select>
</div>
`;
